welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:3: error: not found: value array
  var max:Int = array(0)
                ^extrema:4: error: not found: value array
  var min:Int = array(0)
                ^