welcome.lessons.welcome.array.search.Extrema.scala.code
def extrema(nums:Array[Int]): Int = {
  
  var max:Int = array(0)
  var min:Int = array(0)
  
  for (n <- nums){
    if (n > max){
      max = n
    }else if (n < min){
        min = n
      }
    }
  
  
    return max - min
}
  